force-app/main/default/objects/ssot__LoyaltyProgramCurrencyTier__dlm/fields/ssot__LoyaltyProgramCurrencyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyProgramCurrencyId__c</fullName>
    <label>Loyalty Program Currency</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyProgramCurrencyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>