force-app/main/default/objects/ssot__LoyaltyProgramCurrencyTier__dlm/fields/ssot__LoyaltyTier__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyTier__c</fullName>
    <label>Loyalty Tier</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyTier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>