force-app/main/default/objects/ssot__LoyaltyProgramCurrencyTier__dlm/fields/ssot__NegativePointsBalanceLimitNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__NegativePointsBalanceLimitNumber__c</fullName>
    <label>Negative Points Balance Limit</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>NegativePointsBalanceLimitNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>