force-app/main/default/objects/ssot__LoyaltyProgramCurrencyTier__dlm/fields/ssot__rel_1729831971058_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729831971058_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramCurrencyTier_LoyaltyPr_rel</label>
    <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramCurrencyTier_LoyaltyPr_rel</relationshipLabel>
    <relationshipName>rel_1729831971058_end</relationshipName>
    <type>Lookup</type>
</CustomField>