force-app/main/default/objects/ssot__LoyaltyProgramCurrencyTier__dlm/fields/ssot__rel_1729832000130_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729832000130_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramCurrencyTier_LoyaltyTi_rel</label>
    <referenceTo>ssot__LoyaltyTier__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramCurrencyTier_LoyaltyTi_rel</relationshipLabel>
    <relationshipName>rel_1729832000130_end</relationshipName>
    <type>Lookup</type>
</CustomField>